# patient-simulator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  changelog.md  decisions.md  project_spec.md  project_status.md
docs/plans/: 2026-06-16-memory-context-layer.md
docs/specs/: 2026-06-16-memory-context-layer-design.md  2026-06-17-conversation-loop-design.md  2026-06-17-evaluation-design.md
frontend/: app.py
scenarios/: __init__.py  chest_pain.json  schema.py
scripts/: smoke_conversation.py  smoke_evaluation.py  smoke_generator.py  smoke_rag_specialties.py
src/agents/: __init__.py  base.py  family.py  nurse.py  patient.py  router.py
src/api/: __init__.py  deps.py  main.py  schemas.py
src/conversation/: __init__.py  orchestrator.py
src/core/: config.py  exceptions.py  logging.py
src/db/: crud.py  models.py  session.py
src/evaluation/: __init__.py  evaluator.py  judge.py  report.py  rubric.py
src/llm/: client.py  gemini.py  groq.py  retry.py
src/memory/: __init__.py  context_builder.py  manager.py  summarizer.py
src/rag/: __init__.py  embedder.py  generator.py  retriever.py
src/state/: __init__.py  builder.py  graph.py  serializer.py
tests/: conftest.py
tests/unit/: test_agents_base.py  test_agents_family.py  test_agents_nurse.py  test_agents_patient.py  test_agents_router.py  test_api_routes.py  test_chest_pain_scenario.py  test_config.py  test_conversation_orchestrator.py  test_db_crud.py  test_db_models.py  test_db_session.py  test_embedder.py  test_evaluation_evaluator.py  test_evaluation_judge.py  (+15 more)
(+19 files in other folders)
